--- a/src/main/resources/assets/valor_dungeons/lang/en_us.json
+++ b/src/main/resources/assets/valor_dungeons/lang/en_us.json
@@ -2,5 +2,8 @@
   "creative_mode_tab.valor_dungeons": "Valor Dungeons",
   "item.valor_dungeons.skull_haven_key": "Skull Haven Key",
   "item.valor_dungeons.tomb_of_anubis_key": "Tomb of Anubis Key",
-  "item.valor_dungeons.jaguar_temple_key": "Jaguar Temple Key"
+  "item.valor_dungeons.jaguar_temple_key": "Jaguar Temple Key",
+  "item.valor_dungeons.skull_haven_soul": "Skull Haven Soul",
+  "item.valor_dungeons.tomb_of_anubis_soul": "Temple of Anubis Soul",
+  "item.valor_dungeons.jaguar_temple_soul": "Jaguar Temple Soul"
 }
